# Labs-Cpp

./: .clang-format  .gitignore  My-Resume.tex  README.md
02-Bigint/: README.md  my_bigint.hpp
02-Bigint/test/: run-test-data.sh  test_main.cpp
03-Widgets-Position/: README.md
03-Widgets-Position/include/: abstract_widgets.hpp  ball_icon.hpp  box.hpp  button.hpp  grid.hpp  placeholder.hpp
03-Widgets-Position/src/: abstract_widgets.cpp  ball_icon.cpp  box.cpp  button.cpp  grid.cpp  placeholder.cpp
03-Widgets-Position/test/: ball_icon_test.cpp  box_test.cpp  button_test.cpp  grid_test.cpp  integration_test.cpp  placeholder_test.cpp  run-test-data.sh
04-Tic-Tac-Toe/: CMakeLists.txt  README.md
04-Tic-Tac-Toe/include/: game.hpp  view.hpp
04-Tic-Tac-Toe/src/: game.cpp  main.cpp  view_compact.cpp  view_pretty.cpp
04-Tic-Tac-Toe/test/: run-test-data.sh
05-Ptrs/: README.md  shared_ptr.hpp  unique_ptr.hpp
05-Ptrs/test/: run-test-data.sh  shared_ptr_test.cpp  unique_ptr_test.cpp
06-My-Test/: README.md  mytest.hpp
06-My-Test/test/: run-test-data.sh  test_main.cpp
07-Interpreter/: CMakeLists.txt  README.md
07-Interpreter/include/: matrix.hpp  matrix_interpreter.hpp
07-Interpreter/src/: main.cpp  matrix.cpp  matrix_interpreter.cpp
07-Interpreter/test/: run-test-data.sh
08-Bank/: CMakeLists.txt  README.md
08-Bank-Server/: README.md
08-Bank-Server/include/: bank.hpp
08-Bank-Server/test/: run-test-data.sh
08-Bank/include/: bank.hpp
08-Bank/src/: bank.cpp  bank_server.cpp
08-Bank/test/: bank_test.cpp  server_test.cpp
09-Bmp-Image/: CMakeLists.txt  README.md
09-Bmp-Image/include/: image.hpp
09-Bmp-Image/src/: image.cpp  main.cpp
09-Bmp-Image/test/: run-test-data.sh
Biocad-2025/First Team/: Task.txt
Biocad-2025/First Team/Task 2 Backend/: CMakeLists.txt  README.md
Biocad-2025/First Team/Task 2 Backend/include/: json_interpreter.hpp  view.hpp
Biocad-2025/First Team/Task 2 Backend/src/: json_interpreter.cpp  main.cpp  view_compact.cpp
Biocad-2025/First Team/Task 2 Backend/test/: run-test-data.sh
Biocad-2025/First Team/Task 2 Backend/test/data-test/: 2_json  t1-base.in  t1-base.sol  t2-recur-json.in  t2-recur-json.sol
Yadro/: CMakeLists.txt
Yadro-Impulse-2025/: CMakeLists.txt  README.md  tape_config.txt
Yadro-Impulse-2025/include/: sort.hpp  tape.hpp
Yadro-Impulse-2025/src/: main.cpp  sort.cpp  tape.cpp
Yadro-Impulse-2025/test/: main_test.cpp  run-test-data.sh
Yadro-Impulse-2025/test/data-test/: first.data  first.data.sol
(+36 files in other folders)
